fix: image stretching homepage

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -51,10 +51,11 @@ html
   &_Tilt
     perspective: 2000px
     img
-      height: 100%
-      width: auto
+      width: 100%
+      height: auto
       max-width: 100%
       max-height: 100%
+      object-fit: contain
 
 .section
   width: 100%
